--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,9 @@ services:
 #      SERVICE_NAME: mysql
     ports:
       - 3308:3306
-#    volumes:
-#      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
-#    command:
-#      - --default-authentication-plugin=mysql_native_password
+    volumes:
+      - ./my.cnf:/etc/my.cnf
+      - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
       - rabitpos
 
